# fungivision

./: .gitignore  LICENSE.txt  README.md  demo.ipynb  demo.py  pyproject.toml  requirements.txt
fungivision/: __init__.py  wrapper.py
fungivision/config/: dino.py  kl.py  simclr.py
fungivision/gradients/: base_extractor.py
fungivision/gradients/dino/: __init__.py  extractor.py  transforms.py
fungivision/gradients/simclr/: extractor.py
fungivision/utils/: compression.py  misc.py
src/: wrapper.py
src/config/: dino.py  kl.py  simclr.py
src/fungivision/: wrapper.py
src/fungivision/config/: __init__.py  dino.py  kl.py  simclr.py
src/fungivision/gradients/: __init__.py  base_extractor.py
src/fungivision/gradients/dino/: extractor.py
src/fungivision/gradients/simclr/: extractor.py  transforms.py
src/fungivision/utils/: autograd_hacks.py
src/gradients/: base_extractor.py  kl_extractor.py
src/gradients/dino/: extractor.py  transforms.py
src/gradients/simclr/: __init__.py  extractor.py  transforms.py
src/utils/: compression.py  head.py  metrics.py  misc.py
