[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "fungivision"
version = "0.0.2"
authors = [
  {name="Walter Simoncini", email="walter@ashita.nl"},
]
description = "FUNGI: Features from UNsupervised GradIents"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
  "torch>=2.3.1",
  "torchvision>=0.18.1",
  "tqdm>=4.66.4"
]

[tool.flit.module]
name = "fungivision"